
 - fixed bug when captainhook section is missing.
 - flake8 now obeys tox.ini files in the root of the directory.

0.8.5
=====

 - Add checker for merge marks.
 - Add block_branches checker to prevent commits to eg. master.
 - Use REQUIRED_FILES for isort.
 - Add REQUIRED_FILES variable for checkers - allowing them to copy additional
   files if present.

0.8.4
=====

 - Don't install checkers if the hook can't be installed.
 - Add isort checker for import checks.

0.8.3
=====

 - Add dependency on docopt for easier argument parsing.
 - Change install to be an explicit subcommand: `captainhook install`
 - Add a command to run checkers against uncommitted code: `captainhook run`
 - All checkers now take a list of files to check.
 - Only use `file` to determine pythonic nature if there is no extension.
 - Use py2to3 to analyze python files' py3 compatibility.

0.8.2
=====

 - Analyze the versions of the file to be committed.
 - Fix ``bash`` unicode decode errors.
 - Add behave tests for pdb.
 - Add option to run hooks from current virtualenv.
 - Add --version option.
 - Add option to filter out files in pdb_checker.
 - Add travis.yml file.
 - Add tests for pdb checker.
 - Add __version__ to checkers at install time.
 - Add a grep checker.

0.8.1
=====

 - Delete all captainhook checkers before installing.
 - Don't write pyc files in checkers.
 - Print version on install.
 - Allow checkers to have different module names than checker names.
 - Change flake8 checker to obey [flake8] section of tox.ini.
 - Fix bug when missing a tox.ini file.

0.8
===

 - Optionally pass extra parameters to checkers.
 - Checker controlled defaults.

0.7
===

 - Python3 compatible.

0.6
===

 - Easy addition of new checkers.

0.5
===

 - python3 syntax checker added.

0.4
===

 - Initial working version.