@@ -11,11 +11,11 @@ CHECK_NAME = 'block_branch'
 def run(files, temp_folder, arg=None):
     "Check we're not committing to a blocked branch"
     parser = get_parser()
-    args = parser.parse_args(arg.split())
+    argos = parser.parse_args(arg.split())
 
-    current_branch = bash('git symbolic-ref HEAD').output
-    current_branch = current_branch.replace(b'refs/heads/', b'').strip()
-    if current_branch in args.branches:
+    current_branch = bash('git symbolic-ref HEAD').output.decode('utf-8')
+    current_branch = current_branch.replace('refs/heads/', '').strip()
+    if current_branch in argos.branches:
         return ("Branch '{0}' is blocked from being "
                 "committed to.".format(current_branch))
 
