@@ -1,4 +1,5 @@
 
+ - fixed a bug with blocked branches on py3.
  - fixed bug when captainhook section is missing.
  - flake8 now obeys tox.ini files in the root of the directory.
 
